--- a/frontend/src/components/Contact/contact.css
+++ b/frontend/src/components/Contact/contact.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-position: center center;
 }
 .contact-section{
     width: 100%;
@@ -22,6 +23,7 @@
     line-height: 65px;
     padding-left: 50px;
     font-size: 18px;
+    color: #2c3a47;
 }
 .contact-info i{
     margin-right: 20px;
@@ -40,6 +42,7 @@
     font-size: 35px;
     text-transform: uppercase;
     margin-bottom: 30px;
+    color: #2c3a47;
 }
 .contact-form .text-boxx{
     background: #fff;
@@ -53,6 +56,7 @@
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
     opacity: 0.9;
+    color: #2c3a47;
 }
 .contact-form .text-boxx:first-child{
     margin-right: 15px;
@@ -73,17 +77,21 @@
     opacity: 0.9;
     resize: none;
     outline: none;
+    color: #2c3a47;
 }
 .text-boxx::placeholder { 
     color: black;
     opacity: 1;
+    color: #2c3a47;
   }
 .textarea::placeholder { 
     color: black;
     opacity: 1;
+    color: #2c3a47;
   }
   textarea::-webkit-input-placeholder {
     color: black;
+    color: #2c3a47;
   }
 .contact-form .send-btn{
     background: #FFF5EB;
@@ -98,6 +106,7 @@
     text-transform: uppercase;
     letter-spacing: 2px;
     float: right;
+    color: #2c3a47;
 }
 .contact-form .send-btn:hover{
     /* background: #545454; */
@@ -109,6 +118,7 @@
 .contact-form .send-btn{
     background: #f5f5f5;
     color: #111111;
+    color: #2c3a47;
 }
 /* ALERT MESSAGE SUCCESS*/
 .alert-success{
