--- a/frontend/src/components/NeedyByUserid/needyByUserId.css
+++ b/frontend/src/components/NeedyByUserid/needyByUserId.css
@@ -23,7 +23,7 @@
     padding: 10px;
     height: 450px;
     border-radius: 5px;
-    background: #efefef;
+    background: #e0a0a0;
     box-shadow: rgba(100, 100, 111, 0.2)0 7px 29px 0;
     /* width: 70%; */
     
@@ -36,19 +36,22 @@
     justify-content: space-between;
     margin-bottom: 30px;
     font-size: 20px;
-    color: #000;
+    color: #2c3a47;
   }
   .order_item button{
-    color: crimson;
+    /* color: crimson; */
     text-decoration: none;
     display: block;
     text-align: center;
     height: 40px;
     font-weight: 900;
     font-size: 24px;
-    color: crimson;
+    color: #fff;
     cursor: pointer;
     border: none;
+    font-weight: bold;
+    background: #e0a0a0;
+
   }
   .order_item i{
     margin-right: 15px;
@@ -79,16 +82,17 @@
     margin: 10%;
 }
 .case_order_summery h1{
-    position: relative;
+    /* position: relative; */
     margin-top: 22px;
 left: 35%;
-color: #000;
+color: #2c3a47;
 }
 .desc_order{
     position: relative;
     margin-top: 22px;
 left: 40%;
-color: rgb(104, 99, 99) !important;
+color: #2c3a47 !important;
+font-size: 24px !important;
 }
 .divImageMonynew1{
     /* width: 100%; */
