--- a/frontend/src/components/Register/register.css
+++ b/frontend/src/components/Register/register.css
@@ -20,7 +20,8 @@ background-position: center center;
     text-align: center;
     
 }
-.register_form input{
+
+.register_form input,#selectRole{
     display: block;
     width: 350px;
     height: 40px;
