--- a/frontend/src/components/Category/style.css
+++ b/frontend/src/components/Category/style.css
@@ -151,3 +151,16 @@ color:  dodgerblue !important;
     margin: 0;
   }
  
+
+  .header-cardcategory{
+    color: #908384 !important;
+    text-align: center;
+    font-size: 35px;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+    color: #908384;
+    font-family: poppins;
+  }
