--- a/frontend/src/components/CreateCase/addNeedy2.css
+++ b/frontend/src/components/CreateCase/addNeedy2.css
@@ -1,21 +1,40 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;500;600;700&family=Josefin+Sans:wght@300&family=Montserrat:wght@100&family=Poppins:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+.ourNeedyCase-body{
+    min-height:100vh;
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
+    background-color: #f1f1f1;
+    font-family: "Open Sans",sans-serif !important;
+  }
+  .ourNeedyCase-section{
+    background: url("https://res.cloudinary.com/dqsg0zf1r/image/upload/v1668097554/samples/project%205/fitrat_iNsan_wn8qlh.png") no-repeat left;
+    background-size: 55%;
+    height: 110vh;
+    background-color: #fdfdfd;
+    overflow: hidden;
+    padding:  0;
+    padding: 100px 0;
+  }
+  .ourNeedyCase-inner-container{
+    width: 55%;
+    /* height: 200px; */
+    float: right;
+    background-color: #efefef;
+    padding: 100px;
+  }
+  .ourStory-inner-container h2{
+    margin-bottom: 100px;
+    font-size: 20px;
+    font-weight: 1000;
+  }
+ .needycase_hesder{
+    margin-bottom: 10%;
+    color: #545454;
+    text-transform: uppercase;
 
-.add_needy_body{
-    font-family: "poppins", sans-serif;
-    min-height: 100Vh;
-    background: url('https://res.cloudinary.com/dqsg0zf1r/image/upload/v1668097554/samples/project%205/fitrat_iNsan_wn8qlh.png');
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.add_needy_section{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.add_needy_form{
+  }
+/* ----------New--------- */
+.add_needy_form .add_needy_form{
     max-width: 700px;
     margin-right: 50px;
 }
@@ -23,24 +42,23 @@
     flex: 1;
 }
 .add_needy_form h2{
-    color: gray;
+    color: #908384;
     text-align: center;
     font-size: 35px;
     text-transform: uppercase;
     margin-bottom: 8px;
-
-
     text-transform: uppercase;
     font-weight: bold;
     text-align: center;
-    color: #2c3a47;
+    color: #908384;
     font-family: poppins;
 }
 .add_needy_form .text_box_add_needy{
     background: #fff;
-    color: #2c3a47;
+    color: #908384;
     border: none;
-    width: calc(50% - 10px);
+    margin-top: 9px;
+    width: 100%;
     height: 50px;
     padding: 12px;
     font-size: 15px;
@@ -51,6 +69,7 @@
     font-size: 18px;
     font-weight: bold;
     box-shadow: 5px 5px 20px rgb(156, 147, 147);
+    box-shadow: 5px 5px 20px rgb(171, 48, 48);
     font-family: poppins;
 }
 .add_needy_form .text_box_add_needy:first-child{
@@ -58,7 +77,7 @@
 }
 .add_needy_form textarea{
     background: #fff;
-    color: #2c3a47;
+    color: #908384;
     border: none;
     width: 100%;
     padding: 12px;
@@ -67,34 +86,36 @@
     max-height: 400px;
     resize: vertical;
     border-radius: 5px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 1px rgba(212, 108, 108, 0.1);
     margin-bottom: 20px;
     opacity: 0.9;
     resize: none;
     outline: none;
     font-weight: bold;
-    box-shadow: 5px 5px 20px rgb(156, 147, 147);
+    box-shadow: 5px 5px 20px rgb(171, 48, 48);
     font-family: poppins;
 }
 .add_needy_form .send-btn{
-    background: white;
-    padding: 20px 61px;
+    background: #F8C0C4;
+    padding: 20px 155px;
     font-size: 16px;
     font-weight: bold;
-    color: #2c3a47;
+    color: #908384;
     border: none;
     outline: none;
-    box-shadow: 0px 16px 32px 0px rgb(0 0 0 /6%);
+    box-shadow: 0px 16px 32px 0px rgba(213, 173, 173, 0.06);
     border-radius: 5px;
     /* text-transform: uppercase; */
     letter-spacing: 1px;
     float: right;
-    box-shadow: 5px 5px 20px rgb(156, 147, 147);
+    box-shadow: 5px 5px 20px rgb(156, 111, 111);
     font-family: poppins;
-    
+    margin-bottom: 4%;
+    /* background-color: #F8C0C4; */
+    background: #F8C0C4 !important;
 }
 .add_needy_form .send-btn:hover{
-    background-color: #f1eaea;
+    background-color:rgb(133, 72, 72);
     color: rgb(59, 57, 57);
     transition: .3s;
     cursor: pointer;
@@ -102,7 +123,7 @@
 }
 .add_needy_form .send-btn{
     background:white ;
-    color: #2c3a47;
+    color: #908384;
     font-weight: bold;
 }
 /* ALERT MESSAGE SUCCESS*/
@@ -119,13 +140,13 @@
     border-radius: 4px;
 }
  .text_box_add_needy::placeholder { 
-    color: #2c3a47;
+    color: #908384;
     opacity: 1;
     font-weight: bold;
     font-size: 15px;
   }
   textarea::placeholder {
-    color: #2c3a47;
+    color: #908384;
     opacity: 1;
     font-weight: bold;
     font-size: 18px;
