--- a/frontend/src/components/CreateDonation/createDonation.css
+++ b/frontend/src/components/CreateDonation/createDonation.css
@@ -6,7 +6,7 @@
     min-height: 100vh;
     /* background: linear-gradient(45deg,#fbda61,#FF5757); */
     /* padding-top: 175px; */
-background: #fff;
+background: #efefef;
 }
 .map{
     display: grid;
@@ -37,16 +37,20 @@ background: #fff;
     left: -3;
     bottom: 0;
     margin-top: 300px;
+    align-items: flex-start;
+    justify-content: start;
 }
 .cardpt2_forDonate{
     position: relative;
     width: 350px;
     height: 190px;
-    background: #fff;
+    /* background: #fff; */
+    /* background: linear-gradient(45deg,#fbda61,#FF5757); */
     border-radius: 20px;
     box-shadow: 0 35px 80px rgba(92, 38, 95, 0.15);
     transition: 0.5s;
     padding: 20px;
+    align-items: flex-start;
 }
 .info_donate{
     margin: 10px;
@@ -101,6 +105,7 @@ background: #fff;
     display: flex;
     justify-content: right;
     margin-top: 5px;
+    background: #000;
 }
 .chooseImg_donate button
 {
@@ -146,6 +151,7 @@ background: #fff;
     box-shadow: 0 15px 50px rgba(106, 94, 94, 0.35);
     overflow: hidden; /*radius*/
     transition: 0.5s;
+    z-index: 1000;
 }
 .card_forDonate:hover .img_donate{ /* if u dont foucs on img remove it*/
     width: 250px;
@@ -166,6 +172,8 @@ background: #fff;
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    /* background: linear-gradient(45deg,#aaa4a4,#efefef); */
+    /* background: #efefef; */
     /* overflow: hidden;  */
     /*suggest to remove*/
 }
