add style to dashboard admin

--- a/frontend/src/components/DashboardAdmin/needy.css
+++ b/frontend/src/components/DashboardAdmin/needy.css
@@ -1,5 +1,5 @@
-/* .search{
-    border: 3px solid #ccc;
+.search{
+    /* border: 3px solid #ccc; */
   }
   .search input {
     padding: 2vh;
@@ -17,4 +17,123 @@
     background-color: #fff;
     border: 0;
   
-  } */
+  }
+  .right_side
+  {
+    margin-top: 1.4rem;
+    text-align: left;
+    
+  }
+ 
+.top_admin
+{
+display: flex;
+justify-content: end;
+gap: 2rem;
+/* padding-top: 0.9rem; */
+margin-top: 1rem;
+align-self: center;
+} 
+#menu-btn 
+{
+display: none;
+}
+.them-toggler_admin {
+background-color: var(--color-light);
+display: flex;
+justify-content: space-between;
+align-items: center;
+height: 1.6rem;
+width: 4.2em;
+cursor: pointer;
+border-radius: var(--border-radius-1);
+}
+
+.them-toggler_admin button{
+font-size: 1.6rem;
+width: 50%;
+height: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+cursor: pointer;
+background: transparent;
+border: none;
+
+} 
+.them-toggler_admin span.active{
+  background-color: var(--color-primary);
+  color: #fff;
+  border-radius: var(--border-radius-1);
+  
+}
+.profile
+{
+  display: flex;
+  gap:2rem;
+  text-align: right;
+}
+.recent-updates
+{
+  margin-top: 1rem;
+
+}
+.recent-updates h2
+{margin-bottom: 0.8rem;
+  
+}
+.update{
+  background-color: var(--color-white);
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
+  /* width:18rem; */
+
+}
+.update:hover{
+  box-shadow:none
+}
+
+.headr_admin{
+  display: flex;
+align-self: center;
+  justify-content:space-between;
+  height: 10vh;
+  /* background-color: #000; */
+}
+.adddonate{
+  width: 80vw;
+  height:130vh;
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3vh;
+ border: #6E726D solid 3px;
+ padding-top: 12vh;
+}
+.input {
+  padding: 1.9vh;
+  margin-bottom: 3vh;
+  width:15vw;
+  border-radius: 2%;
+  border: 3px solid #ccc;
+  font-size: calc(1.14rem + 0.4vw);
+}
+
+.button {
+  width:16vw;
+  margin-top: 3vh;
+  padding: 2vh;
+  border-radius: 4%;
+/* border: #e60b63; */
+border: #FF1616;
+/* background-color:#e60b63; */
+background-color: #FF1616;
+border-color:#F94F5A;
+background-color: #F26E7C;
+color: #fff;
+font-size: calc(0.5rem + 0.8vw);
+margin-bottom: 3vh;
+}
