--- a/frontend/src/components/DashboardAdmin/style.css
+++ b/frontend/src/components/DashboardAdmin/style.css
@@ -1,6 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+
 :root{
---color-primary:#FF5757;
+/* --color-primary:#e12aba;#e60b63; */
+--color-primary:#FB91CF;
+/* --color-primary:#7380ec; */
+--color-admin:#ff5757;
 --color-danger:#11B6CC;
 --color-success:#41f1b6;
 --color-warning:#ffbb55;
@@ -21,6 +25,14 @@
 --box-shadow:0 2rem 3rem var(--color-light)
 
 }
+.dark-them{
+  background-color:#181a1e;
+  --color-white:#202528;
+  --color-dark:#edeffd;
+  --color-dark-variant:#a3bdcc;
+  --color-light:rgba(0,0,0,0.4);
+  --box-shadow:0 2rem 3rem var(var(--color-light))
+}
 .body{
   margin: 0;
   padding: 0;
@@ -30,14 +42,13 @@
 .container_panel{
   font-size: 14px;
   width:100vw;
-  height: 100vh;
-  font-size: 0.88rem;
-   font-family: 'Poppins', sans-serif;
+  /* height: 100vh; */
+  font-family: "Roboto", sans-serif;
    background-color: var((--colo-background));
-  background-color: #f6f6f9;;
+  /* background-color: #f6f6f9;; */
   
 }
-.admin_panal h3{
+.container_panel h3{
   color: var(--color-dark);
 }
 .image_admin_logo img
@@ -46,25 +57,27 @@
   width: 100%;
 
 }
-.admin_panal h1{
+.container_panel h1{
   font-weight: 500;
-  font-size: calc(1.3 rem);
+  font-size: 1.5rem;
+
 
 }
-/* .admin_panal h3{
-  font-size: calc(0.87 rem + 1vh);
+.admin_panal h3{
+  /* font-size: calc(0.87 rem + 1vh); */
   font-weight: 500;
 
-} */
+}
 .admin_panal h4{
-  font-size: calc(0.77 rem + 1vh);
+font-size: 0.77rem;
+
 
 }
 .admin_panal h5{
-  font-size: calc(0.7 rem + 1vh);
+  font-size: 0.7rem
 
 }
-.admin_panal p{
+.admin_panal p .header{
 color: var(--color-dark_variant);
 }
 .admin_panal span{
@@ -72,13 +85,15 @@ color: var(--color-dark_variant);
   color:#363949;
   }
 
-.profile_img{
-  width: 2rem;
-  height: 2.8rem;
-  border-radius: 50%;
+/* .profile_img{
+  width: 12rem;
+  height: 5rem;
   overflow: hidden;
-}
-.text_muted{
+  display: block;
+ } */
+
+ .text_muted{
+  padding-top: .5rem;
   color: var(--color-info-dark);
 
 }
@@ -97,34 +112,45 @@ color: var(--color-dark_variant);
 
    .container_panel{
      display: grid;
-    width: 97%;
+     width:100%;
+     width:100;
     margin: 0 auto;
-    gap:1.8rem;
+    gap:0.1rem;
     /* grid-template-columns: 14rem auto 23rem; */
     grid-template-columns: 14rem auto ;
 
     overflow: hidden;
-    border-radius: 12px; 
+    border-radius: 2px
 
   }
+  .container_panel_a{
+    display: grid;
+   width: 100%;
+   margin: 0 auto;
+   gap:0.1rem;
+   grid-template-columns: 14rem auto 23rem;
+   overflow: hidden;
+   border-radius: 2px
+
+ }
 
   .container_a
   {
     height: 100vh;
-    /* background-color:#fff; */
+    background-color:#fff;
   }
  
 .image_admin_logo
 {
-  display: flex;
+  /* display: flex;
   align-items: center;
   background-color: #fff;
-  justify-content: space-between;
+  justify-content: space-between; */
   margin-top: 1rem;
 }
 .log_admin{
-  width:5rem;
-  height:2rem;
+  /* width:12vw;
+  height:10vh */
 }
   .menu_item_admin:hover {
     cursor: pointer;
@@ -159,8 +185,11 @@ transition: all 300ms ease;
 {
 font-weight: 500;
 transition: all 300ms ease;
+font-weight: 700;
 color: #7d8da1;
-  font-size: 1.1rem
+  font-size: 0.9rem;
+  /* font-size: calc(1.5rem +1.8vw); */
+
 
 }
 .menu_item_admin span {
@@ -175,8 +204,10 @@ font-size: 1.3rem;
   } 
   
   .active {
-  background-color:rgba(132,139,200,0.18); 
-  color:#FF5757; 
+  /* background-color:rgba(132,139,200,0.18);  */
+  background-color: var(--);
+  /* color:#FF5757;  */
+  color: var(--color-primary);
   margin-left: 0;
 
   }
@@ -202,15 +233,16 @@ margin-left: 1rem;
 /*------------------------------------------------------*/
 .main_dashbored{
   margin: 1.4rem;
+  /* text-align: center; */
 }
 .date
 {
-/* display: inline-block; */
+display: inline-block;
 background-color: var(--color-light);
 border-radius: var(--border-radius-1);
 margin-top: 1rem;
 padding: 0.5rem 1.6rem;
-text-align:left;
+/* text-align:left; */
 }
 
 .date input[type='date']
@@ -231,7 +263,7 @@ color:var(var(--color-dark));
   background-color: var(--color-white);
   padding: var(--card-padding);
   border-radius: var(--card-border-radius);
-margin: 0.5rem;
+margin: 0.3rem;
 box-shadow: var(--box-shadow);
 transition:all 300ms ease;
 }
@@ -273,10 +305,17 @@ box-shadow: none;
 .card_info_data
 {
 
-width: 17rem;  /* display: flex;
+width: 17rem; 
+ /* display: flex;
   align-items: center;
   justify-content: space-between; */
+  padding-top:2vh;
 }
+.card_info_data span{
+  text-align: center;
+}
+
+
 .latest_Case
 {
   margin-top: 2rem;
@@ -285,6 +324,7 @@ width: 17rem;  /* display: flex;
 .latest_Case h2
 {
 font-size: 0.8rem;
+text-align: left;
 }
 .latest_Case table
 {
@@ -295,6 +335,19 @@ font-size: 0.8rem;
   box-shadow: var(--box-shadow);
   padding: var(--card-padding);
   transition: all 300ms ease;
+}
+.latest_Case1
+{
+  background-color: var(--color-white);
+  width: 80%;
+  border-radius: var(--card-border-radius);
+  text-align: left;
+  box-shadow: var(--box-shadow);
+  padding: var(--card-padding);
+  transition: all 300ms ease;
+}
+.latest_Case1:hover{
+  box-shadow: none;
 }
 .latest_Case table:hover
 {
@@ -314,7 +367,7 @@ box-shadow: none;
 }
 
   .chart{
-    height: 40vh;
+    height: 45vh;
    /* width: 30vw;  */
   }
   .pie_chart
@@ -323,8 +376,61 @@ box-shadow: none;
     grid-template-columns: 1fr 1fr 1fr;
     
   }
- .space
- {
-  height: 20vh;
- }
-   
+
+/* @media screen  and (max-width:1200px){
+  .container_panel{
+    width:93%;
+grid-template-columns: 7rem auto 23rem ;
+  }
+  .container_panel_a{
+    width:93%;
+grid-template-columns: 7rem auto 23rem ;
+  }
+  .sidebar h3{
+    display: none;
+  }
+  /* */
+  /* .insight
+  {
+    grid-template-columns: 1fr;
+    gap:0
+  }
+}  */
+/* @media screen  and (max-width:1200px){
+
+  .container_panel{
+    width:100%;
+  }
+  .sidebar
+  {
+   position: fixed;
+   left: 0;
+   background-color: var(--color-white);
+   width: 18rem;
+   z-index: 3;
+   box-shadow: 1rem 3rem 4rem var(--color-light);
+   height: 100vh;
+   padding-right: var(--card-padding);
+  }
+  /* logo */
+  .sidebar h3{
+    display: inline;
+  }
+  
+  .latest_Case3
+  {
+
+  }
+/* 
+.show{
+  display: block;
+} */
+
+
+.logo_name
+{
+  color: var(--color-primary);
+}
+.card_info_data h1{
+  text-align: left;
+}
