--- a/frontend/src/components/Category/style.css
+++ b/frontend/src/components/Category/style.css
@@ -163,4 +163,5 @@ color:  dodgerblue !important;
     text-align: center;
     color: #908384;
     font-family: poppins;
+    /* background:rgb(27,27,27,0.5) !important; */
   }
