--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -1,5 +1,7 @@
 .contact-form-title{
     color: #545454;
+    text-align: start;
+    font-size: 20px;
 }
 .footer{
     display: flex;
@@ -13,7 +15,7 @@
 }
 .footer-item{
     color: #545454;
-    padding: 20px;
+    padding: 10px;
 }
 .footer-item-title{
     margin-bottom: 21px;
@@ -124,4 +126,3 @@
     }
 }
 
-/* note : still need edit */
