--- a/frontend/src/components/OurImapct/ourImapct.css
+++ b/frontend/src/components/OurImapct/ourImapct.css
@@ -91,7 +91,7 @@
         font-size: 15px; 
     }
     .itemssss span{
-        font-size: 23px;
+        font-size: 23px;   /*---*/
         margin-bottom: 20px;
     }
     .border{
