--- a/frontend/src/components/ApiPganation/styleApi.css
+++ b/frontend/src/components/ApiPganation/styleApi.css
@@ -11,7 +11,7 @@
   .user {
     border: 2px solid black;
     border-radius: 10px;
-    background-color: #ecae44;
+    background-color: #58482b;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,17 +43,17 @@
   
   .paginationBttns a:hover {
     color: white;
-    background-color:  #ff802b;
+    background-color:  #545454;
   }
   
   .paginationActive a {
     color: white;
-    background-color:  #ff802b;
+    background-color:  #545454;
   }
   
   .paginationDisabled a {
-    color: rgb(13, 7, 7);
-    background-color: rgb(7, 4, 4);
+    color: rgb(191, 56, 56);
+    background-color: rgb(168, 68, 68);
   }
 
 
@@ -65,18 +65,18 @@
   box-shadow: border-box;
   font-size: 1.7rem;
   font-family: 'Merriweather Sans' ,sans-serif;
-   background:white; /* linear-gradient(45deg,#fbda61,#b14219) ; */
-  color: #eceece;
-  padding: 3rem;
+   background: #efefef;; 
+  color: #545454;
+  padding: 0rem;
 }
 .books h2{
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
   font-size: 4rem;
 }
 .books h3{
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
   font-size: 3rem;
 }
 .all_books{
@@ -97,10 +97,11 @@
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
   justify-content: center;
   border-radius: 1.2rem;
   margin: 1rem;
+  box-shadow: 5px 5px 20px rgb(171, 48, 48);
 }
 .book:hover img{
   scale: 1.1;
@@ -117,13 +118,17 @@
   color: #eceece;
   display: inline-block;
   text-decoration: none;
-  background:linear-gradient(45deg,#fbda61,#FF5757);
+  background:#f5f5f5;
   padding: 1.2rem 3rem;
   border-radius: 1rem;
   margin-top: 1rem;
   transform: all 0.2s;
   font-size: 19px;
   border: none;
+  background-color: #908384;
+  color: #FFF5EB;
+  transition: .3s;
+  cursor: pointer;
 }
 .book .book_btn:hover{
   transform: scale(1.1);
