--- a/frontend/src/components/CardCategory/homecardcategory.css
+++ b/frontend/src/components/CardCategory/homecardcategory.css
@@ -46,11 +46,11 @@
 }
 .card-category-intro-p{
     font-size: 20px;
-    margin: 10px;
+    margin: 10px; /*10*/
     visibility: hidden;
     opacity: 0;
-    text-align: center;
-    padding-right: 20px;
+    text-align: start !important;
+    padding-right: 20px; /*20*/
 }
 span{
     font-weight: bold;
@@ -139,7 +139,7 @@ color: #545454 !important;
         width: 100%; 
     }
 }
-@media(max-width:820px){
+@media(max-width:720px){
     .home-card-category-container{
         width: 100%;
     }
@@ -147,6 +147,7 @@ color: #545454 !important;
         /* padding: 10px 15px; */
         width: 70%;
         margin: 10px;
+        /* height: 500px; */
     }
 
     /* .card-category-wrapper{
