--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -23,7 +23,7 @@
   height: 4.5em;
   /* background-color: #a993ff; */
   padding: 0.5em;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   margin: 0 auto 0 auto;
   /* width: 60px;
   border-radius: 37px;
