--- a/frontend/src/components/Login/login.css
+++ b/frontend/src/components/Login/login.css
@@ -159,6 +159,27 @@ background-position: center center;
     border-left: 8px solid #FFA502;
     border-radius: 4px;
 } */
+.newform_login_btn{
+
+    width: 350px;
+    height: 40px;
+    font-size: 20px;
+    background-color: green;
+    border: none;
+    color: white;
+    margin-top: 20px;
+    cursor:none;
+    font-weight: bold;
+    color: #111111;
+    box-shadow: 0px 16px 32px 0px rgb(0 0 0 /6%);
+    display:inline;
+}
+.newform_login_btn:disabled,
+button[disabled]
+{
+  
+    
+}
 
 
 
