--- a/frontend/src/components/Register/register.css
+++ b/frontend/src/components/Register/register.css
@@ -174,9 +174,27 @@ background-position: center center;
   .box select option {
     padding: 30px;
   } */
+.newform_register_btn{
+    width: 350px;
+    height: 40px;
+    font-size: 20px;
+    background-color: green;
+    border: none;
+    color: white;
+    margin-top: 20px;
+   
+    font-weight: bold;
+    color: #111111;
+    box-shadow: 0px 16px 32px 0px rgb(0 0 0 /6%);
+    cursor: none;
+}
 
-
-
+.newform_register_btn:disabled,
+button[disabled]
+{
+  
+    
+}
 
 
 
