--- a/frontend/src/components/ApiPganation/styleApi.css
+++ b/frontend/src/components/ApiPganation/styleApi.css
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
     justify-content: center;
     flex-direction: column;
-    width: 100vw;
+    width: 70vw;
   }
   
   .user {
@@ -30,14 +30,15 @@
     list-style: none;
     display: flex;
     justify-content: center;
+    margin: 5%;
   }
   
   .paginationBttns a {
     padding: 10px;
     margin: 8px;
     border-radius: 5px;
-    border: 1px solid #ff802b;
-    color:  #ff802b;
+    border: 1px solid PINK;
+    color:  PINK;
     cursor: pointer;
   }
   
@@ -192,22 +193,22 @@
     padding: 10px;
     margin: 8px;
     border-radius: 5px;
-    border: 1px solid #ff802b;
-    color:  #ff802b;
+    border: 1px solid PINK;
+    color: black;
     cursor: pointer;
   }
   
   .paginationBttns a:hover {
     color: white;
-    background-color:  #ff802b;
+    background-color:  PINK;
   }
   
   .paginationActive a {
     color: white;
-    background-color:  #ff802b;
+    background-color: palevioletred
   }
   
   .paginationDisabled a {
-    color: rgb(13, 7, 7);
+    color: white;
     background-color: rgb(7, 4, 4);
   }
