--- a/frontend/src/components/NeedyByUserid/needyByUserId.css
+++ b/frontend/src/components/NeedyByUserid/needyByUserId.css
@@ -105,3 +105,14 @@ font-size: 24px !important;
     height: 460px;
 }
 
+/* .newbi-trash-fill{
+
+  
+  cursor:none;
+}
+.newbi-trash-fill:disabled,
+button[disabled]
+{
+
+  
+}  */
