--- a/frontend/src/components/FAQs/FAQs.css
+++ b/frontend/src/components/FAQs/FAQs.css
@@ -4,7 +4,7 @@
     width: 100vw;
     justify-content: center;
     align-items: center;
-    
+    background: url("https://res.cloudinary.com/dv3wzcjeh/image/upload/v1669216819/FAQ10_skdbel.png") no-repeat  ;
 }
 .FAQs-map-title-answer{
     width: 500px;
