--- a/frontend/src/components/Home/style.css
+++ b/frontend/src/components/Home/style.css
@@ -1,5 +1,5 @@
 .center_center{
-    background: linear-gradient(rgba(17, 5, 5, 0.8), rgba(1, 1, 23, 0.8)),
+    background: linear-gradient(#110505cc, rgba(1, 1, 23, 0.8)),
     url("https://res.cloudinary.com/dqsg0zf1r/image/upload/v1668472897/larm-rmah-AEaTUnvneik-unsplash-scaled_snjcmr.jpg");
     /* background-image: url("https://res.cloudinary.com/dqsg0zf1r/image/upload/v1668473777/larm-rmah-AEaTUnvneik-unsplash-scaled-overlay_s7k6id.png");
 */
