--- a/frontend/src/components/OurStory/ourStory.css
+++ b/frontend/src/components/OurStory/ourStory.css
@@ -1,6 +1,6 @@
 .ourstory-body{
     min-height: 100vh;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     background-color: #f1f1f1;
