--- a/frontend/src/components/DashboardAdmin/style.css
+++ b/frontend/src/components/DashboardAdmin/style.css
@@ -211,7 +211,7 @@ font-size: 1.3rem;
   margin-left: 0;
 
   }
-  .active:before {
+  .active::before {
     content: "";
     width: 8px;
     height: 100%;
