--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -11,7 +11,7 @@
     background-color:  #ccc;
     flex-wrap: wrap;
    /* position: relative; */
-  margin-top: 0.2%;
+  /* margin-top: 0.2%; */
 }
 .footer-item{
     color: #545454;
