--- a/frontend/src/components/Navbar/style.css
+++ b/frontend/src/components/Navbar/style.css
@@ -1,14 +1,14 @@
 .headerneedy {
     width: 100%;
     height: 50px;
-    background-color: #4834637a;
+    background-color: #F9efe3;
     display: flex;
     align-items: center;
     justify-content: space-around;
     position: relative;
     transition: all 1s ease;
     padding: 0 7px;
-    color: white;
+    color: black;
     /* padding: 0 30px; */
   }
   /* logo style*/
