--- a/frontend/src/components/Socket/Socket.css
+++ b/frontend/src/components/Socket/Socket.css
@@ -107,10 +107,13 @@
 }
 .chat-window .chat-header {
   height: 45px;
-  border-radius: 6px;
-  background: #263238;
+  /* border-radius: 6px; */
+  background: #545454;
   position: relative;
   cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 5px 5px 20px rgb(171, 48, 48);
 }
 .chat-window .chat-header p {
   display: block;
@@ -118,12 +121,16 @@
   color: #fff;
   font-weight: 700;
   line-height: 45px;
+  font-size: 20px;
+ 
 }
-
+/* this one body chat */
 .chat-window .chat-body {
   height: calc(450px - (45px + 70px));
-  border: 1px solid #263238;
+  /* border: 1px solid #263238; */
   background: #fff;
+    border-radius: 5px;
+  box-shadow: 5px 0px 20px rgb(171, 48, 48);
 
   position: relative;
 }
@@ -141,6 +148,7 @@
   height: auto;
   padding: 10px;
   display: flex;
+  
 }
 
 .chat-window .chat-body .message .message-content {
@@ -159,7 +167,8 @@
   padding-left: 5px;
   overflow-wrap: break-word;
   word-break: break-word;
-  font-size: 20px !important; 
+  font-size: 20px !important;
+  box-shadow: 5px 5px 20px rgb(171, 48, 48);
 }
 
 #you {
@@ -183,7 +192,7 @@
   justify-content: flex-end;
   background-color: #908384;
   color: #fff;
-  font-weight: bold;
+  /* font-weight: bold; */
   font-size: 20px !important; 
 }
 
@@ -204,9 +213,13 @@
 
 .chat-window .chat-footer {
   height: 40px;
-  border: 1px solid #263238;
-  border-top: none;
+  /* border: 1px solid #263238; */
+  /* border-top: none; */
   display: flex;
+  border-radius: 5px;
+ box-shadow: 5px 5px 20px rgb(171, 48, 48);
+ z-index: 1010010;
+ margin-top: 1.10px;
 }
 
 .chat-window .chat-footer input {
@@ -215,10 +228,12 @@
   border: 0;
   padding: 0 0.7em;
   font-size: 1em;
-  border-right: 1px dotted #607d8b;
+  border-right: 1px dotted #768b60;
 
   outline: none;
   font-family: "Open Sans", sans-serif;
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px rgb(171, 48, 48);
 }
 
 .chat-window .chat-footer button {
@@ -231,7 +246,8 @@
   background: transparent;
   outline: none;
   font-size: 25px;
-  color: lightgray;
+  color: #F8BDC1;
+  box-shadow: 0px 0px 5px rgb(171, 48, 48);
 }
 
 .chat-window .chat-footer button:hover {
@@ -247,10 +263,11 @@
 
 /* socket_wrapper */
 .socket_wrapper{
-  padding: 7%;
+  padding: 0 25%;
   justify-content: center;
   align-items: center;
   left: 0;
   right: 0;
-  background: #FDF4F5;
+  /* background: #FDF4F5; */
+
 }
