--- a/frontend/src/components/CreateDonation/createDonation.css
+++ b/frontend/src/components/CreateDonation/createDonation.css
@@ -161,8 +161,8 @@ background: #efefef;
     position: absolute;
     top: 0;
     left: 0;
-    width: 15vw;
-    height: 23vh;
+    width:100%;
+    height:90%;
     object-fit: cover;
     margin: 0 auto;
     display: block;
@@ -242,6 +242,7 @@ background: #efefef;
 Link{
     text-decoration: none !important;
 }
-.chosecasebtn_donate .true{
+.true{
     background-color: rgb(33, 224, 74);
   }
+ 
