--- a/frontend/src/components/DashboardAdmin/needy.css
+++ b/frontend/src/components/DashboardAdmin/needy.css
@@ -102,38 +102,27 @@ align-self: center;
   height: 10vh;
   /* background-color: #000; */
 }
-.adddonate{
-  width: 80vw;
-  height:130vh;
-  font-family: "Roboto", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 3vh;
- border: #6E726D solid 3px;
- padding-top: 12vh;
-}
+
 .input {
-  padding: 1.9vh;
-  margin-bottom: 3vh;
-  width:15vw;
+  padding: 0.6rem;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  width:15rem;
   border-radius: 2%;
   border: 3px solid #ccc;
-  font-size: calc(1.14rem + 0.4vw);
+  font-size: 0.8rem;
+  margin-right: 2rem;
 }
 
 .button {
-  width:16vw;
-  margin-top: 3vh;
-  padding: 2vh;
+  width:13rem;
+  margin-top: 3rem;
+  padding: 0.8rem;
   border-radius: 4%;
-/* border: #e60b63; */
-border: #FF1616;
-/* background-color:#e60b63; */
-background-color: #FF1616;
-border-color:#F94F5A;
-background-color: #F26E7C;
+  background-color: var(--color-primary);
+  border: var(--color-primary);
 color: #fff;
-font-size: calc(0.5rem + 0.8vw);
-margin-bottom: 3vh;
+font-size: 1.4rem;
+margin-bottom: 3rem;
+font-family: 'po';
 }
