--- a/frontend/src/components/Header/video.css
+++ b/frontend/src/components/Header/video.css
@@ -15,7 +15,27 @@
     flex-direction: column;
     align-items: center;
     padding: 110px 100px;
+   
 }
+
+.box_video:before {
+  /* content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(17, 17, 17, 0.3)); */
+  content: '';
+  background: rgba(0, 0, 0, 0.67);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+} 
 @media (max-width:1000px){
     .box_video{
         padding: 100px 50px;
