--- a/frontend/src/components/Login/login.css
+++ b/frontend/src/components/Login/login.css
@@ -8,7 +8,7 @@
     background-size: cover;
     font-family: "Roboto", sans-serif !important;
     background: linear-gradient(rgba(17, 5, 5, 0.58), rgba(1, 1, 23, 0.58)),
-      url("https://images.pexels.com/photos/271168/pexels-photo-271168.jpeg?auto=compress&cs=tinysrgb&w=600");
+      url("https://res.cloudinary.com/ddsrkj1dx/image/upload/v1669291518/Donation_ENG_orttfu.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
